@@ -86,7 +86,7 @@ public class Test01
 			{
 				Class c = Thread.currentThread().getContextClassLoader().loadClass("org.jboss.jbossts.qa.Utils.OrbSetup");
 
-				orbClass = (Setup) c.newInstance();
+				orbClass = (Setup) c.getDeclaredConstructor().newInstance();
 
 				orbClass.start(args);
 			}
